--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1091,7 +1091,10 @@ a.sidebar-title-link {
 .hero-image {
   display: none;
   /* width: 205px; */
-  max-width: 125px;
+  /* max-width: 125px; */
+  width: 100%; 
+  max-width: none;
+    /* width: 200px; */
   position: relative;
   top: -70px;
 }
@@ -1104,7 +1107,8 @@ a.sidebar-title-link {
 
   .hero-image {
     display: block;
-    max-width: 200px;
+    max-width: 300px;
+    /* max-width: 100%;  */
   }
 }
 
